src/tests/function-calls/4.txt
function-calls/4.c:6:3: error: number of arguments to function 'f' does not match definition (have 1, need 2)
   f(0);
   ^
